--- a/com.top_logic.element/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.element/src/main/java/META-INF/messages_de.properties
@@ -554,6 +554,8 @@ com.top_logic.element.layout.instances.DirectInstancesTable = Tabelle der direkt
 com.top_logic.element.layout.instances.DirectInstancesTable.tooltip = <i>Tabellenkonfigurations-Plugin</i>, das eine Tabelle mit dem Modell der sie umgebenden Komponente konfiguriert (in der Erwartung, dass es sich um einen <i>Geschäftsobjekttyp</i> handelt).
 com.top_logic.element.layout.instances.InstanceBrowserGrid = Instanz-Browser-Gitter
 com.top_logic.element.layout.instances.InstanceBrowserGrid.tooltip = <i>Grid-Komponente</i> für die generische Instanzentabelle in der Administration. <p> Sie setzt die <i>Sichtbarkeit</i> aus dem Modell außer Kraft und zeigt jede Spalte als bearbeitbar an, es sei denn, dies ist technisch unmöglich (z. B. berechnete Spalten). </p>
+com.top_logic.element.layout.instances.export.InstanceExportCommand = Instanzexport
+com.top_logic.element.layout.instances.export.InstanceExportCommand.tooltip = <i>Befehlshandler</i>, der die ausgewählten Objekte in XML exportiert, um sie später wieder zu importieren.
 com.top_logic.element.layout.meta.AttributeI18NColumns = Spalten für Attribut-Internationalisierung
 com.top_logic.element.layout.meta.AttributeI18NColumns.tooltip = <i>Tabellenkonfigurations-Plugin</i>, das dynamisch Spalten für alle unterstützten Sprachen erstellt, die den lokalisierten Namen eines Attributs enthalten.
 com.top_logic.element.layout.meta.ControlProviderModificator = Control-Provider-Modifikator
@@ -1350,8 +1352,6 @@ com.top_logic.element.meta.kbbased.storage.TLItemStorage.Config.storage-mapping.
 com.top_logic.element.meta.kbbased.storage.TLItemStorage.tooltip = Speicher für <i>strukturierte Typteile</i>, die <i>Objekte</i> speichern.
 com.top_logic.element.meta.kbbased.storage.TTypeStorage = Typ-Speicher
 com.top_logic.element.meta.kbbased.storage.TTypeStorage.tooltip = <i>Speicherimplementierung</i> für das eingebaute Attribut <code>tType</code> für alle <i>Objekte</i>.
-com.top_logic.element.meta.kbbased.storage.WithStorageAttribute.storage-attribute = Datenbankspalte
-com.top_logic.element.meta.kbbased.storage.WithStorageAttribute.storage-attribute.tooltip = Der Name der Datenbankspalte, in der der Wert gespeichert wird. <p> Ist er nicht festgelegt, wird der Name des Attributs als Standardwert verwendet. </p>
 com.top_logic.element.meta.kbbased.storage.mappings.DirectMapping = Direkte Kartierung
 com.top_logic.element.meta.kbbased.storage.mappings.DirectMapping.Config.application-type = Art der Anwendung
 com.top_logic.element.meta.kbbased.storage.mappings.DirectMapping.Config.application-type.tooltip = Die Anwendungswertklasse.
