--- a/com.top_logic.element/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.element/src/main/java/META-INF/messages_en.properties
@@ -554,6 +554,8 @@ com.top_logic.element.layout.instances.DirectInstancesTable = Direct instances t
 com.top_logic.element.layout.instances.DirectInstancesTable.tooltip = <i>Table configuration plug-in</i> that configures a table with it's surrounding component's model (expecting it to be a <i>business object type</i>).
 com.top_logic.element.layout.instances.InstanceBrowserGrid = Instance browser grid
 com.top_logic.element.layout.instances.InstanceBrowserGrid.tooltip = <i>Grid component</i> for the generic instances table in the administration. <p> It overrides the <i>visibility</i> from the model and displays every column as editable, unless it is technically impossible (e.g. derived columns). </p>
+com.top_logic.element.layout.instances.export.InstanceExportCommand = Instance export command
+com.top_logic.element.layout.instances.export.InstanceExportCommand.tooltip = <i>Command handler</i> exporting the selected objects to XML for later re-import.
 com.top_logic.element.layout.meta.AttributeI18NColumns = Attribute internationalization columns
 com.top_logic.element.layout.meta.AttributeI18NColumns.tooltip = <i>Table configuration plug-in</i> dynamically creating columns for all supported languages containing the localized name of an attribute.
 com.top_logic.element.layout.meta.ControlProviderModificator = Control provider modificator
@@ -1350,8 +1352,6 @@ com.top_logic.element.meta.kbbased.storage.TLItemStorage.Config.storage-mapping.
 com.top_logic.element.meta.kbbased.storage.TLItemStorage.tooltip = Storage for <i>structured type parts</i> storing <i>objects</i>.
 com.top_logic.element.meta.kbbased.storage.TTypeStorage = T type storage
 com.top_logic.element.meta.kbbased.storage.TTypeStorage.tooltip = <i>Storage implementation</i> for the built-in <code>tType</code> attribute of all <i>objects</i>.
-com.top_logic.element.meta.kbbased.storage.WithStorageAttribute.storage-attribute = Storage attribute
-com.top_logic.element.meta.kbbased.storage.WithStorageAttribute.storage-attribute.tooltip = The name of the database column which is used to store the value. <p> If not set, it defaults to the name of the attribute. </p>
 com.top_logic.element.meta.kbbased.storage.mappings.DirectMapping = Direct mapping
 com.top_logic.element.meta.kbbased.storage.mappings.DirectMapping.Config.application-type = Application type
 com.top_logic.element.meta.kbbased.storage.mappings.DirectMapping.Config.application-type.tooltip = The application value class.
