--- a/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
@@ -913,6 +913,12 @@ com.top_logic.model.search.providers.InitializerByExpression = Berechneter Initi
 com.top_logic.model.search.providers.InitializerByExpression.Config.function = Funktion
 com.top_logic.model.search.providers.InitializerByExpression.Config.function.tooltip = Funktion, die ein Objekt des annotierten Typs initialisiert. <p> Es wird erwartet, dass die Funktion das neu erstellte Objekt als einziges Argument verwendet. </p> <p> Das Objekt hat bereits Standardwerte für alle Attribute. </p>
 com.top_logic.model.search.providers.InitializerByExpression.tooltip = <i>Objektinitialisierer</i>, der das Objekt durch Ausführen eines <code>TL-Script</code> initialisiert.
+com.top_logic.model.search.providers.InstanceResolverByExpression = TL-Script-Instanzauflöser
+com.top_logic.model.search.providers.InstanceResolverByExpression.Config.identity = Identität
+com.top_logic.model.search.providers.InstanceResolverByExpression.Config.identity.tooltip = Funktion, die eine stabile ID für ein Objekt berechnet. <p> Die Funktion erwartet das zu identifizierende Objekt als Argument und muss die ID des Objekts als Ergebnis zurückgeben. </p>
+com.top_logic.model.search.providers.InstanceResolverByExpression.Config.resolver = Auflöser
+com.top_logic.model.search.providers.InstanceResolverByExpression.Config.resolver.tooltip = Funktion, die ein Objekt anhand seiner ID auflöst. <p> Die Funktion erwartet die ID des Objekts als einziges Argument und gibt das aufgelöste Objekt zurück. </p>
+com.top_logic.model.search.providers.InstanceResolverByExpression.tooltip = <i>Instanzauflöser</i> in TL-Script implementiert.
 com.top_logic.model.search.providers.LabelByExpression = Beschriftung über TL-Script
 com.top_logic.model.search.providers.LabelByExpression.Config.css-class = Css-Klasse
 com.top_logic.model.search.providers.LabelByExpression.Config.css-class.tooltip = CSS-Klasse, die für jedes Objekt zurückgegeben wird. Wenn nicht gesetzt, wird der Wert aus dem inneren Provider verwendet.
