--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -6918,6 +6918,8 @@ com.top_logic.model.access.TLStorageMapping = Speicherzuordnung
 com.top_logic.model.access.TLStorageMapping.implementation = Umsetzung
 com.top_logic.model.access.TLStorageMapping.implementation.tooltip = Der Algorithmus für annotierte <i>Speicherzuordnung</i>.
 com.top_logic.model.access.TLStorageMapping.tooltip = Annotation, die einer <i>Objekteigenschaft</i> einen <i>Speicherzuordnungsalgorithmus</i> zuordnet.
+com.top_logic.model.access.WithStorageAttribute.storage-attribute = Mit Speicherattribut
+com.top_logic.model.access.WithStorageAttribute.storage-attribute.tooltip = Der Name der Datenbankspalte, in der der Wert gespeichert wird. <p> Ist er nicht festgelegt, wird der Name des Attributs als Standardwert verwendet. </p>
 com.top_logic.model.annotate.AllLanguagesInViewMode = Alle Sprachen im Ansichtsmodus anzeigen
 com.top_logic.model.annotate.AllLanguagesInViewMode.tooltip = Diese Annotation legt fest, ob die Werte für alle Sprachen oder nur für die Sprache des Benutzers im Ansichtsmodus angezeigt werden.
 com.top_logic.model.annotate.AllLanguagesInViewMode.value.tooltip = Wenn dieser Wert auf <code>true</code> gesetzt ist, werden im Ansichtsmodus die Werte für alle Sprachen angezeigt. Wenn er auf <code>false</code> gesetzt ist, wird im Ansichtsmodus nur der Wert für die Sprache des Benutzers angezeigt.
@@ -7457,17 +7459,29 @@ com.top_logic.model.format.TLClassifierFormat.Config.language.tooltip = Die Spra
 com.top_logic.model.format.TLClassifierFormat.Config.type = Typ
 com.top_logic.model.format.TLClassifierFormat.Config.type.tooltip = Der vollständig qualifizierte Name der <i>Klassifikation</i>.
 com.top_logic.model.format.TLClassifierFormat.tooltip = Konfigurierbarer <i>Konfigurationswertanbieter</i>, der Klassifikatoren von <i>Klassifizierungsmodellelementen</i> auf der Grundlage ihrer Bezeichnung oder ihres technischen Namens liest. <p> Hinweis: Da diese Implementierung Klassifikatoren zwischenspeichert, ist sie für kurzlebige Szenarien gedacht, z. B. für einen Importer, der das Format erstellt, die Daten importiert und dann das Format verwirft. Auf keinen Fall darf eine Instanz dieses Formats als Mitglied einer langlebigen Konfiguration (z. B. als <i>Instanzformatwert</i> einer Layoutkonfiguration) verwendet werden. </p>
+com.top_logic.model.instance.annotation.TLInstanceResolver = Instanzauflöser
+com.top_logic.model.instance.annotation.TLInstanceResolver.impl = Umsetzung
+com.top_logic.model.instance.annotation.TLInstanceResolver.impl.tooltip = Die Auflösungsimplementierung, die für den annotierten Typ verwendet werden soll.
+com.top_logic.model.instance.annotation.TLInstanceResolver.tooltip = Annotation, die eine <i>Instanzauflösungsimplementierung</i> für einen bestimmten Objekttyp angibt.
+com.top_logic.model.instance.annotation.TLValueResolver = Wertauflöser
+com.top_logic.model.instance.annotation.TLValueResolver.impl = Umsetzung
+com.top_logic.model.instance.annotation.TLValueResolver.impl.tooltip = Die Implementierung der <i>Wertauflösung</i>, die für den Export und Import von Werten des annotierten Typs zu verwenden ist.
+com.top_logic.model.instance.annotation.TLValueResolver.tooltip = Annotation, die eine <i>Wertauflösungsimplementierung</i> mit einem primitiven Typ verbindet.
 com.top_logic.model.instance.importer.schema.AttributeValueConf = Attributwert conf
+com.top_logic.model.instance.importer.schema.AttributeValueConf.collection-value = Wert der Auflistung
+com.top_logic.model.instance.importer.schema.AttributeValueConf.collection-value.tooltip = Werte, die dem Attribut <i>Name</i> zugeordnet werden sollen. <p> Für einzelne primitive Werte kann <i>Value</i> als Abkürzung verwendet werden. </p>
 com.top_logic.model.instance.importer.schema.AttributeValueConf.name = Name
 com.top_logic.model.instance.importer.schema.AttributeValueConf.name.tooltip = Name des zu importierenden Attributs.
-com.top_logic.model.instance.importer.schema.AttributeValueConf.references = Literaturhinweise
-com.top_logic.model.instance.importer.schema.AttributeValueConf.references.tooltip = Verweise auf andere Objekte, die im Attribut <i>Name</i> gesetzt werden sollen. <p> Für ein primitives Attribut muss stattdessen <i>Value</i> gesetzt werden. </p>
 com.top_logic.model.instance.importer.schema.AttributeValueConf.tooltip = Konfiguration, die einen Attributwert einer Objektimportdeklaration angibt.
 com.top_logic.model.instance.importer.schema.AttributeValueConf.value = Wert
-com.top_logic.model.instance.importer.schema.AttributeValueConf.value.tooltip = Textueller Wert eines primitiven Attributs. <p> Bei einem Referenzattribut müssen stattdessen <i>Referenzen</i> gesetzt werden. </p>
+com.top_logic.model.instance.importer.schema.AttributeValueConf.value.tooltip = Textuelle Darstellung des Wertes eines primitiven Attributs. <p> Der Wert muss eine serialisierte Variante des in der Datenbank gespeicherten Wertes sein, die mit <code>StorageMapping#getBusinessObject(Object)</code> des Attributtyps kompatibel ist. </p> <p> Für ein Referenzattribut muss stattdessen <i>Auflistung Wert</i> gesetzt werden. </p>
+com.top_logic.model.instance.importer.schema.ComplexValueConf = Komplexer Wert conf
+com.top_logic.model.instance.importer.schema.ComplexValueConf.contents = Inhalt
+com.top_logic.model.instance.importer.schema.ComplexValueConf.contents.tooltip = Der Konfigurationswert als generisches XML-Dokumentenfragment.
+com.top_logic.model.instance.importer.schema.ComplexValueConf.tooltip = Ein Wert für einen komplexen primitiven Typ, der durch eine <i>Konfigurationswertbindung</i> für den Anwendungstyp serialisiert wird.
 com.top_logic.model.instance.importer.schema.GlobalRefConf = Globale ref conf
 com.top_logic.model.instance.importer.schema.GlobalRefConf.id = ID
-com.top_logic.model.instance.importer.schema.GlobalRefConf.id.tooltip = Kennung des Objekts, auf das verwiesen wird. <p> Die Syntax des Bezeichners kann von Typ zu Typ variieren. </p>
+com.top_logic.model.instance.importer.schema.GlobalRefConf.id.tooltip = Bezeichner des Objekts, auf das verwiesen wird. <p> Die Syntax des Bezeichners hängt von der <i>Instanzauflösung</i> ab, die zur Erstellung dieser ID verwendet wird, und kann von Typ zu Typ variieren. </p>
 com.top_logic.model.instance.importer.schema.GlobalRefConf.kind = Art
 com.top_logic.model.instance.importer.schema.GlobalRefConf.kind.tooltip = Der <i>Instanzauflöser</i>, für den die <i>ID</i> gemacht ist.
 com.top_logic.model.instance.importer.schema.GlobalRefConf.tooltip = Verweis auf eine bereits existierende Instanz in der Zielanwendung eines Imports.
@@ -7484,9 +7498,25 @@ com.top_logic.model.instance.importer.schema.ObjectConf.attributes = Eigenschaft
 com.top_logic.model.instance.importer.schema.ObjectConf.attributes.tooltip = Attribute, die für das importierte Objekt festgelegt werden sollen.
 com.top_logic.model.instance.importer.schema.ObjectConf.id = ID
 com.top_logic.model.instance.importer.schema.ObjectConf.id.tooltip = Optionaler import-lokaler Bezeichner, der verwendet wird, um dieses Objekt aus Referenzen anderer importierter Objekte zu referenzieren.
-com.top_logic.model.instance.importer.schema.ObjectConf.tooltip = Importieren Sie die Beschreibung eines einzelnen neu zu erstellenden Objekts.
+com.top_logic.model.instance.importer.schema.ObjectConf.tooltip = Importbeschreibung eines einzelnen neu zu erstellenden Objekts. <p> Die Objektkonfiguration kann entweder auf oberster Ebene oder innerhalb einer Kompositionsreferenz erfolgen, die als Teil eines anderen Objekts exportiert wird. </p>
 com.top_logic.model.instance.importer.schema.ObjectConf.type = Typ
 com.top_logic.model.instance.importer.schema.ObjectConf.type.tooltip = Der Typname (qualifizierter Name des <i>Business-Objekttyps</i>), von dem das importierte Objekt eine Instanz sein sollte.
+com.top_logic.model.instance.importer.schema.ObjectsConf = Objekte conf
+com.top_logic.model.instance.importer.schema.ObjectsConf$ResolverDef = Auflöser def
+com.top_logic.model.instance.importer.schema.ObjectsConf$ResolverDef.tooltip = Resolver-Eintrag, der einen <i>Instanzauflöser</i> mit einem <i>strukturierten Typ</i> verbindet.
+com.top_logic.model.instance.importer.schema.ObjectsConf.ResolverDef.impl = Umsetzung
+com.top_logic.model.instance.importer.schema.ObjectsConf.ResolverDef.impl.tooltip = Die Implementierung der <i>Instanzauflösung</i>, die für Objekte des angegebenen <i>Typs</i> verwendet werden soll.
+com.top_logic.model.instance.importer.schema.ObjectsConf.ResolverDef.type = Typ
+com.top_logic.model.instance.importer.schema.ObjectsConf.ResolverDef.type.tooltip = Der <i>strukturierte Typ</i>, für den die angegebene Implementierung <i>der Instanzauflösung</i> verwendet werden soll.
+com.top_logic.model.instance.importer.schema.ObjectsConf.objects = Objekte
+com.top_logic.model.instance.importer.schema.ObjectsConf.objects.tooltip = Beschreibung der zu importierenden Objekte.
+com.top_logic.model.instance.importer.schema.ObjectsConf.resolvers = Auflöser
+com.top_logic.model.instance.importer.schema.ObjectsConf.resolvers.tooltip = Auflöser, die zum Nachschlagen der in dieser Konfiguration gespeicherten Referenzen auf stabile Objekte verwendet werden.
+com.top_logic.model.instance.importer.schema.ObjectsConf.tooltip = Auflistung der zu importierenden Objekte.
+com.top_logic.model.instance.importer.schema.PrimitiveValueConf = Primitiver Wert conf
+com.top_logic.model.instance.importer.schema.PrimitiveValueConf.tooltip = Ein einzelnes Element einer primitiven Auflistung von Werten.
+com.top_logic.model.instance.importer.schema.PrimitiveValueConf.value = Wert
+com.top_logic.model.instance.importer.schema.PrimitiveValueConf.value.tooltip = Der serialisierte Wert.
 com.top_logic.model.internal.AbstractConfiguredStorageMapping = Konfigurierte Speicherzuordnung
 com.top_logic.model.internal.AbstractConfiguredStorageMapping.tooltip = Basisklasse für konfigurierte <i>Speicherzuordnungen</i>.
 com.top_logic.model.internal.ConfigurationStorageMapping = Zuordnung der Konfigurationsspeicher
