--- a/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
@@ -913,6 +913,12 @@ com.top_logic.model.search.providers.InitializerByExpression = Computed initiali
 com.top_logic.model.search.providers.InitializerByExpression.Config.function = Function
 com.top_logic.model.search.providers.InitializerByExpression.Config.function.tooltip = Function initializing an object of the annotated type. <p> The function is expected to use the newly created object single argument. </p> <p> The object already has default values for all attributes. </p>
 com.top_logic.model.search.providers.InitializerByExpression.tooltip = <i>Object initializer</i> initializing the object by executing a <code>TL-Script</code> expression.
+com.top_logic.model.search.providers.InstanceResolverByExpression = TL-Script instance resolver
+com.top_logic.model.search.providers.InstanceResolverByExpression.Config.identity = Identity
+com.top_logic.model.search.providers.InstanceResolverByExpression.Config.identity.tooltip = Function computing a stable an ID for an object. <p> The function expects the object to identify as argument and must return the object's ID as result. </p>
+com.top_logic.model.search.providers.InstanceResolverByExpression.Config.resolver = Resolver
+com.top_logic.model.search.providers.InstanceResolverByExpression.Config.resolver.tooltip = Function resolving an object from its ID. <p> The function expects the object's ID as single argument and returns the resolved object. </p>
+com.top_logic.model.search.providers.InstanceResolverByExpression.tooltip = <i>Instance resolver</i> implemented in TL-Script.
 com.top_logic.model.search.providers.LabelByExpression = Label by expression
 com.top_logic.model.search.providers.LabelByExpression.Config.css-class = Css class
 com.top_logic.model.search.providers.LabelByExpression.Config.css-class.tooltip = CSS class to return for each object. If not set, the value from the inner provider is used.
