Ticket #28426: Added import command to the instance editor.

--- a/com.top_logic.element/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.element/src/main/java/META-INF/messages_de.properties
@@ -556,6 +556,11 @@ com.top_logic.element.layout.instances.InstanceBrowserGrid = Instanz-Browser-Git
 com.top_logic.element.layout.instances.InstanceBrowserGrid.tooltip = <i>Grid-Komponente</i> für die generische Instanzentabelle in der Administration. <p> Sie setzt die <i>Sichtbarkeit</i> aus dem Modell außer Kraft und zeigt jede Spalte als bearbeitbar an, es sei denn, dies ist technisch unmöglich (z. B. berechnete Spalten). </p>
 com.top_logic.element.layout.instances.export.InstanceExportCommand = Instanzexport
 com.top_logic.element.layout.instances.export.InstanceExportCommand.tooltip = <i>Befehlshandler</i>, der die ausgewählten Objekte in XML exportiert, um sie später wieder zu importieren.
+com.top_logic.element.layout.instances.importer.InstanceImportCommand = Befehl zum Importieren einer Instanz
+com.top_logic.element.layout.instances.importer.UploadForm = Formular zum Hochladen
+com.top_logic.element.layout.instances.importer.UploadForm.data = Daten
+com.top_logic.element.layout.instances.importer.UploadForm.data.tooltip = Daten zum Hochladen. <p> Bei den Daten muss es sich um XML-kodierte Objekte in einem Format handeln, das zuvor aus diesem oder einem anderen System exportiert wurde. Wenn die importierten Objekte Verweise auf andere Objekte enthalten, die nicht im Datensatz enthalten sind, wird davon ausgegangen, dass diese Objekte bereits vor dem Import im System vorhanden sind. </p>
+com.top_logic.element.layout.instances.importer.UploadForm.tooltip = Upload-Formular für den Import von Objektdaten im XML-Format.
 com.top_logic.element.layout.meta.AttributeI18NColumns = Spalten für Attribut-Internationalisierung
 com.top_logic.element.layout.meta.AttributeI18NColumns.tooltip = <i>Tabellenkonfigurations-Plugin</i>, das dynamisch Spalten für alle unterstützten Sprachen erstellt, die den lokalisierten Namen eines Attributs enthalten.
 com.top_logic.element.layout.meta.ControlProviderModificator = Control-Provider-Modifikator
