--- a/com.top_logic.element/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.element/src/main/java/META-INF/messages_en.properties
@@ -556,6 +556,11 @@ com.top_logic.element.layout.instances.InstanceBrowserGrid = Instance browser gr
 com.top_logic.element.layout.instances.InstanceBrowserGrid.tooltip = <i>Grid component</i> for the generic instances table in the administration. <p> It overrides the <i>visibility</i> from the model and displays every column as editable, unless it is technically impossible (e.g. derived columns). </p>
 com.top_logic.element.layout.instances.export.InstanceExportCommand = Instance export command
 com.top_logic.element.layout.instances.export.InstanceExportCommand.tooltip = <i>Command handler</i> exporting the selected objects to XML for later re-import.
+com.top_logic.element.layout.instances.importer.InstanceImportCommand = Instance import command
+com.top_logic.element.layout.instances.importer.UploadForm = Upload form
+com.top_logic.element.layout.instances.importer.UploadForm.data = Data
+com.top_logic.element.layout.instances.importer.UploadForm.data.tooltip = Data to upload. <p> The data must be XML-encoded objects in a format formerly exported from this or another system. If the imported objects contain references to other object not in the data set, it is expected that these objects already exist in the system before import. </p>
+com.top_logic.element.layout.instances.importer.UploadForm.tooltip = Upload form for importing object data in XML format.
 com.top_logic.element.layout.meta.AttributeI18NColumns = Attribute internationalization columns
 com.top_logic.element.layout.meta.AttributeI18NColumns.tooltip = <i>Table configuration plug-in</i> dynamically creating columns for all supported languages containing the localized name of an attribute.
 com.top_logic.element.layout.meta.ControlProviderModificator = Control provider modificator
