--- a/com.top_logic.element/src/main/webapp/WEB-INF/conf/resources/ElementMessages_de.properties
+++ b/com.top_logic.element/src/main/webapp/WEB-INF/conf/resources/ElementMessages_de.properties
@@ -1,3 +1,5 @@
+layouts.element.meta.InstanceBrowser.table.displayDialog_Dialog = Objekte importieren
+layouts.element.meta.InstanceBrowser.table.displayDialog_Dialog.title = Daten importieren
 Attributed.name = Name
 Comment.content = Inhalt
 Comment.creator = Ersteller
