Ticket #28426: Added progress to import command.

--- a/com.top_logic.element/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.element/src/main/java/META-INF/messages_de.properties
@@ -10,6 +10,11 @@ class.com.top_logic.element.layout.grid.I18NConstants.CONTEXT_NOT_PART_OF_TABLE_
 class.com.top_logic.element.layout.grid.I18NConstants.CONTEXT_NOT_UNIQUE__CONTEXT = Das Kontextobjekt ''{0}'' existiert mehrfach im Baum.
 class.com.top_logic.element.layout.grid.I18NConstants.NO_CONTEXT_OBJECT_FOR_ROW = Kein Kontextobjekt für die neue Zeile angegeben.
 class.com.top_logic.element.layout.grid.I18NConstants.NO_NEW_OBJECT_FOR_THIS_CONTEXT__CONTEXT = Es ist nicht möglich, ein neues Objekt in diesem Kontext zu erstellen: {0}
+class.com.top_logic.element.layout.instances.importer.I18NConstants.COMMITTING_CHANGES = Änderungen festschreiben.
+class.com.top_logic.element.layout.instances.importer.I18NConstants.IMPORTING_OBJECTS = Objekte importieren.
+class.com.top_logic.element.layout.instances.importer.I18NConstants.IMPORT_FINISHED = Import beendet.
+class.com.top_logic.element.layout.instances.importer.I18NConstants.IMPORT_PROGRESS = Daten importieren...
+class.com.top_logic.element.layout.instances.importer.I18NConstants.PARSING_DATA = Analysieren von Daten.
 class.com.top_logic.element.layout.meta.I18NConstants.ERROR_MODULE_WITH_NAME_EXISTS__NAME = Ein Modul mit dem Namen ''{0}'' existiert bereits.
 class.com.top_logic.element.layout.meta.I18NConstants.ERROR_PART_WITH_NAME_EXISTS__NAME_GENERALIZATION = Ein Typteil mit dem Namen ''{0}'' existiert bereits in der Generalisierung ''{1}''.
 class.com.top_logic.element.layout.meta.I18NConstants.ERROR_PART_WITH_NAME_EXISTS__NAME_TYPE = Ein Typteil mit dem Namen ''{0}'' existiert bereits in ''{1}''.
@@ -557,6 +562,7 @@ com.top_logic.element.layout.instances.InstanceBrowserGrid.tooltip = <i>Grid-Kom
 com.top_logic.element.layout.instances.export.InstanceExportCommand = Instanzexport
 com.top_logic.element.layout.instances.export.InstanceExportCommand.tooltip = <i>Befehlshandler</i>, der die ausgewählten Objekte in XML exportiert, um sie später wieder zu importieren.
 com.top_logic.element.layout.instances.importer.InstanceImportCommand = Befehl zum Importieren einer Instanz
+com.top_logic.element.layout.instances.importer.InstanceImportCommand.tooltip = <i>Befehlshandler</i>, der Objekte aus einer hochgeladenen XML-Datei importiert.
 com.top_logic.element.layout.instances.importer.UploadForm = Formular zum Hochladen
 com.top_logic.element.layout.instances.importer.UploadForm.data = Daten
 com.top_logic.element.layout.instances.importer.UploadForm.data.tooltip = Daten zum Hochladen. <p> Bei den Daten muss es sich um XML-kodierte Objekte in einem Format handeln, das zuvor aus diesem oder einem anderen System exportiert wurde. Wenn die importierten Objekte Verweise auf andere Objekte enthalten, die nicht im Datensatz enthalten sind, wird davon ausgegangen, dass diese Objekte bereits vor dem Import im System vorhanden sind. </p>
