--- a/com.top_logic.element/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.element/src/main/java/META-INF/messages_en.properties
@@ -10,6 +10,11 @@ class.com.top_logic.element.layout.grid.I18NConstants.CONTEXT_NOT_PART_OF_TABLE_
 class.com.top_logic.element.layout.grid.I18NConstants.CONTEXT_NOT_UNIQUE__CONTEXT = The context object ''{0}'' exists multiple times in the tree.
 class.com.top_logic.element.layout.grid.I18NConstants.NO_CONTEXT_OBJECT_FOR_ROW = No context object given for the new row.
 class.com.top_logic.element.layout.grid.I18NConstants.NO_NEW_OBJECT_FOR_THIS_CONTEXT__CONTEXT = It's not possible to create a new object in this context: {0}
+class.com.top_logic.element.layout.instances.importer.I18NConstants.COMMITTING_CHANGES = Committing changes.
+class.com.top_logic.element.layout.instances.importer.I18NConstants.IMPORTING_OBJECTS = Importing objects.
+class.com.top_logic.element.layout.instances.importer.I18NConstants.IMPORT_FINISHED = Import finished.
+class.com.top_logic.element.layout.instances.importer.I18NConstants.IMPORT_PROGRESS = Importing data...
+class.com.top_logic.element.layout.instances.importer.I18NConstants.PARSING_DATA = Parsing data.
 class.com.top_logic.element.layout.meta.I18NConstants.ERROR_MODULE_WITH_NAME_EXISTS__NAME = A module with name ''{0}'' already exists.
 class.com.top_logic.element.layout.meta.I18NConstants.ERROR_PART_WITH_NAME_EXISTS__NAME_GENERALIZATION = A type part with name ''{0}'' already exists in the generalization ''{1}''.
 class.com.top_logic.element.layout.meta.I18NConstants.ERROR_PART_WITH_NAME_EXISTS__NAME_TYPE = A type part with name ''{0}'' already exists in ''{1}''.
@@ -557,6 +562,7 @@ com.top_logic.element.layout.instances.InstanceBrowserGrid.tooltip = <i>Grid com
 com.top_logic.element.layout.instances.export.InstanceExportCommand = Instance export command
 com.top_logic.element.layout.instances.export.InstanceExportCommand.tooltip = <i>Command handler</i> exporting the selected objects to XML for later re-import.
 com.top_logic.element.layout.instances.importer.InstanceImportCommand = Instance import command
+com.top_logic.element.layout.instances.importer.InstanceImportCommand.tooltip = <i>Command handler</i> importing objects from an uploaded XML file.
 com.top_logic.element.layout.instances.importer.UploadForm = Upload form
 com.top_logic.element.layout.instances.importer.UploadForm.data = Data
 com.top_logic.element.layout.instances.importer.UploadForm.data.tooltip = Data to upload. <p> The data must be XML-encoded objects in a format formerly exported from this or another system. If the imported objects contain references to other object not in the data set, it is expected that these objects already exist in the system before import. </p>
