--- a/com.top_logic.element/src/main/webapp/WEB-INF/conf/resources/ElementMessages_en.properties
+++ b/com.top_logic.element/src/main/webapp/WEB-INF/conf/resources/ElementMessages_en.properties
@@ -977,6 +977,8 @@ layouts.element.create.genericCreate.title = Create form
 layouts.element.meta.InstanceBrowser.exportInstances = Export selected objects
 layouts.element.meta.InstanceBrowser.exportName = objects
 layouts.element.meta.InstanceBrowser.newInstance = Create new instance.
+layouts.element.meta.InstanceBrowser.table.displayDialog_Dialog = Import objects
+layouts.element.meta.InstanceBrowser.table.displayDialog_Dialog.title = Import data
 layouts.element.meta.InstanceBrowser.table.title = Instances
 layouts.element.meta.metaElementTree.abstract = abstract
 layouts.element.meta.metaElementTree.configExport = Export configuration
