--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -7474,7 +7474,7 @@ com.top_logic.model.instance.importer.schema.AttributeValueConf.name = Name
 com.top_logic.model.instance.importer.schema.AttributeValueConf.name.tooltip = Name des zu importierenden Attributs.
 com.top_logic.model.instance.importer.schema.AttributeValueConf.tooltip = Konfiguration, die einen Attributwert einer Objektimportdeklaration angibt.
 com.top_logic.model.instance.importer.schema.AttributeValueConf.value = Wert
-com.top_logic.model.instance.importer.schema.AttributeValueConf.value.tooltip = Textuelle Darstellung des Wertes eines primitiven Attributs. <p> Der Wert muss eine serialisierte Variante des in der Datenbank gespeicherten Wertes sein, die mit <code>StorageMapping#getBusinessObject(Object)</code> des Attributtyps kompatibel ist. </p> <p> Für ein Referenzattribut muss stattdessen <i>Auflistung Wert</i> gesetzt werden. </p>
+com.top_logic.model.instance.importer.schema.AttributeValueConf.value.tooltip = Textuelle Darstellung des Wertes eines primitiven Attributs. <p> Der Wert muss eine serialisierte Variante des in der Datenbank gespeicherten Wertes sein, die mit der Abbildung des Attributtyps auf die Speicherung kompatibel ist. </p> <p> Für ein Referenzattribut muss stattdessen der <i>Wert der Auflistung</i> angegeben werden. </p>
 com.top_logic.model.instance.importer.schema.ComplexValueConf = Komplexer Wert conf
 com.top_logic.model.instance.importer.schema.ComplexValueConf.contents = Inhalt
 com.top_logic.model.instance.importer.schema.ComplexValueConf.contents.tooltip = Der Konfigurationswert als generisches XML-Dokumentenfragment.
