--- a/com.top_logic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_en.properties
@@ -7474,7 +7474,7 @@ com.top_logic.model.instance.importer.schema.AttributeValueConf.name = Name
 com.top_logic.model.instance.importer.schema.AttributeValueConf.name.tooltip = Name of the attribute to import.
 com.top_logic.model.instance.importer.schema.AttributeValueConf.tooltip = Configuration specifying an attribute value of an object import declaration.
 com.top_logic.model.instance.importer.schema.AttributeValueConf.value = Value
-com.top_logic.model.instance.importer.schema.AttributeValueConf.value.tooltip = Textual representation of a primitive attribute's value. <p> The value must be a serialized variant of the value stored in the database compatible with <code>StorageMapping#getBusinessObject(Object)</code> of the attribute's type. </p> <p> For a reference attribute, <i>Collection value</i> must be set instead. </p>
+com.top_logic.model.instance.importer.schema.AttributeValueConf.value.tooltip = Textual representation of a primitive attribute's value. <p> The value must be a serialized variant of the value stored in the database compatible with the storage mapping of the attribute's type. </p> <p> For a reference attribute, <i>Collection value</i> must be set instead. </p>
 com.top_logic.model.instance.importer.schema.ComplexValueConf = Complex value conf
 com.top_logic.model.instance.importer.schema.ComplexValueConf.contents = Contents
 com.top_logic.model.instance.importer.schema.ComplexValueConf.contents.tooltip = The configuration value as generic XML document fragment.
