Ticket #28464: Startup actions: Added I18N.

--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -1803,6 +1803,8 @@ com.top_logic.knowledge.service.migration.MigrationConfig.pre-processors = Vorve
 com.top_logic.knowledge.service.migration.MigrationConfig.pre-processors.tooltip = <i>Migrationsprozessor</i>, der vor den regulären Prozessoren ausgeführt wird. <p> Es wird empfohlen, die Baselines von Modell und Schema aufgrund von Codeänderungen (z. B. Umbenennung von Klassen oder Eigenschaften oder strukturelle Änderungen) vor der regulären Verarbeitung anzupassen, damit die regulären Prozessoren die Baselines mit typisierten Konfigurationswerkzeugen lesen können. </p>
 com.top_logic.knowledge.service.migration.MigrationConfig.processors = Prozessoren
 com.top_logic.knowledge.service.migration.MigrationConfig.processors.tooltip = <i>Migrationsprozessor</i>, der vor der eigentlichen Migration auszuführen ist, wie unter <i>Migration</i> beschrieben.
+com.top_logic.knowledge.service.migration.MigrationConfig.startup-actions = Startup-Aktionen
+com.top_logic.knowledge.service.migration.MigrationConfig.startup-actions.tooltip = Aktionen, die durchgeführt werden, nachdem das System alle Module gestartet hat.
 com.top_logic.knowledge.service.migration.MigrationConfig.tooltip = Konfiguration der Migrationsschritte für die dargestellte Version.
 com.top_logic.knowledge.service.migration.MigrationConfig.version = Fassung
 com.top_logic.knowledge.service.migration.MigrationConfig.version.tooltip = Die <i>Version</i>, für die diese Migration vorgenommen wird.
