--- a/com.top_logic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_en.properties
@@ -1803,6 +1803,8 @@ com.top_logic.knowledge.service.migration.MigrationConfig.pre-processors = Pre p
 com.top_logic.knowledge.service.migration.MigrationConfig.pre-processors.tooltip = <i>Migration processor</i> to be executed out of order before regular processors. <p> Adjusting the baselines of model and schema due to code changes (e.g. class or property renames or structural changes) is recommended to do before regular processing to allow regular processors to read the baselines with typed configuration tooling. </p>
 com.top_logic.knowledge.service.migration.MigrationConfig.processors = Processors
 com.top_logic.knowledge.service.migration.MigrationConfig.processors.tooltip = <i>Migration processor</i> to execute before the actual migration as described in <i>Migration</i>.
+com.top_logic.knowledge.service.migration.MigrationConfig.startup-actions = Startup actions
+com.top_logic.knowledge.service.migration.MigrationConfig.startup-actions.tooltip = Actions to apply after the system has started all modules.
 com.top_logic.knowledge.service.migration.MigrationConfig.tooltip = Configuration of the migration steps for the represented version.
 com.top_logic.knowledge.service.migration.MigrationConfig.version = Version
 com.top_logic.knowledge.service.migration.MigrationConfig.version.tooltip = The <i>version</i> for which this migration is made.
