Ticket #28466: Change listeners: Added I18N.

--- a/com.top_logic.element/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.element/src/main/java/META-INF/messages_de.properties
@@ -967,6 +967,8 @@ com.top_logic.element.layout.version.CreateTagComponent$CreateTagCommandHandler.
 com.top_logic.element.layout.version.CreateTagComponent.Config.metaElement = Meta-Element
 com.top_logic.element.layout.version.CreateTagComponent.tooltip = Allgemeine Erstellungskomponente für ein <i>Tag</i>.
 com.top_logic.element.meta.AbstractStorageBase = Lagerbasis
+com.top_logic.element.meta.AbstractStorageBase.Config.change-listeners = Hörer ändern
+com.top_logic.element.meta.AbstractStorageBase.Config.change-listeners.tooltip = Listener, die aufgerufen werden, wenn ein Wert gesetzt wird.
 com.top_logic.element.meta.AbstractStorageBase.tooltip = Basisklasse für alle <i>Speicherimplementierungen</i>.
 com.top_logic.element.meta.AttributeSettings = Attribut-Einstellung
 com.top_logic.element.meta.AttributeSettings$AttributeSetting = Einstellung der Attribute
