--- a/com.top_logic.element/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.element/src/main/java/META-INF/messages_en.properties
@@ -967,6 +967,8 @@ com.top_logic.element.layout.version.CreateTagComponent$CreateTagCommandHandler.
 com.top_logic.element.layout.version.CreateTagComponent.Config.metaElement = Meta element
 com.top_logic.element.layout.version.CreateTagComponent.tooltip = General create component for a <i>tag</i>.
 com.top_logic.element.meta.AbstractStorageBase = Storage base
+com.top_logic.element.meta.AbstractStorageBase.Config.change-listeners = Change listeners
+com.top_logic.element.meta.AbstractStorageBase.Config.change-listeners.tooltip = Listeners that are invoked whenever a value is set.
 com.top_logic.element.meta.AbstractStorageBase.tooltip = Base class for all <i>storage implementations</i>.
 com.top_logic.element.meta.AttributeSettings = Attribute settings
 com.top_logic.element.meta.AttributeSettings$AttributeSetting = Attribute setting
