--- a/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
@@ -773,6 +773,10 @@ com.top_logic.model.search.providers.ApplyCommandByExpression.UIOptions.dynamic-
 com.top_logic.model.search.providers.ApplyCommandByExpression.tooltip = Apply command handler that can be extended with an operation in TL-Script.
 com.top_logic.model.search.providers.AttributeByExpression = Calculation via TL-Script
 com.top_logic.model.search.providers.AttributeByExpression.tooltip = <i>Attribute value locator</i> that can be configured using search expressions.
+com.top_logic.model.search.providers.AttributeChangeListenerByExpression = TL-Script change listener
+com.top_logic.model.search.providers.AttributeChangeListenerByExpression.Config.operation = Operation
+com.top_logic.model.search.providers.AttributeChangeListenerByExpression.Config.operation.tooltip = Operation that is called when an attribute is changed. <p> The operation expects three arguments: </p> <pre> obj -> attr -> value -> ... </pre> <table> <tr> <td>obj</td> <td>The object whose attribute was updated.</td> <td>attr</td> <td>The attribute that got a new value.</td> <td>value</td> <td>The new value set to the object's attribute.</td> </tr> </table> <p> The result of the operation is ignored. The operation is invoked in a transaction and is allowed to modify other objects reachable from the given one. </p>
+com.top_logic.model.search.providers.AttributeChangeListenerByExpression.tooltip = <i>Attribute change listener</i> implementation in TL-Script.
 com.top_logic.model.search.providers.AttributeValueBindingByExpression = Attribute value binding by expression
 com.top_logic.model.search.providers.AttributeValueBindingByExpression.Config.key-attributes = Key attributes
 com.top_logic.model.search.providers.AttributeValueBindingByExpression.Config.key-attributes.tooltip = The attribute names to store retrieved key values in. <p> If more than one attribute name is configured, the <i>Key function</i> is expected to compute a list with as many entries as key attribute names are given. </p> <p> If only a single key attribute name is given, the <i>Key function</i> may compute a single value to use as key. </p>
